# web_crawler

./: .gitignore  AGENTS.md  Cargo.toml  README.md
concurrency_pattern/: Cargo.toml
concurrency_pattern/src/: animate_with_indicatif.rs  animate_with_spinner.rs  associated_types_v1.rs  associated_types_v2.rs  main.rs  static_trait_bound_v1.rs
crawler_playground/: Cargo.toml
crawler_playground/src/: crawler_plgrd_concurr.rs  hacker_news_scrapper.rs  imdb_scrapper.rs  main.rs  snippets.rs
data/: file1.txt
docs/: actix-web-framework.md  concurrency-notes-2.md  design-notes.md  notes-on-concepts.md  readme.md  scrapping-IMDb.md  static-trait-bound.md
web_crawler/: Cargo.toml
web_crawler/src/: main.rs  web_crawler_v2.rs
web_crawler_blackhat/: Cargo.toml
web_crawler_blackhat/docs/: NOTES.md  README.md
web_crawler_blackhat/src/: crawler.rs  main.rs
web_crawler_blackhat/src/spiders/: cvedetails.rs  quotes.rs
wiki_crawler/: Cargo.toml
wiki_crawler/src/: main.rs
