[package]
name = "concurrency_pattern"
version = "0.1.0"
edition = "2021"

[dependencies]
spinners = "*"
indicatif = "0.17.7"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
rand = "0.8.4"

[[bin]]
name = "concurrency_pattern"
path = "src/main.rs"

[[bin]]
name = "associated_types_1"
path = "src/associated_types_v1.rs"

[[bin]]
name = "associated_types_2"
path = "src/associated_types_v2.rs"

[[bin]]
name = "static_trait_bound_1"
path = "src/static_trait_bound_v1.rs"

[[bin]]
name = "animate_with_spinner"
path = "src/animate_with_spinner.rs"

[[bin]]
name = "animate_with_indicatif"
path = "src/animate_with_indicatif.rs"