[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.22"
select = "0.6.0"
tokio = {version = "1.34.0", features = ["full"]}
url = "2.5.0"

[[bin]]
name = "web_crawler_main"
path = "src/main.rs"

[[bin]]
name = "web_crawler_v2"
path = "src/web_crawler_v2.rs"
